# numa3

./: README.md
numa/: IK.py  boot.py  numa.py  numa2.py  numa_old.py  poses.py  test_IK.py  test_iteration_speed.py
numapi/: README.md  numa_bringup.launch
numapi/numapi_to_pyboard/: package.xml  setup.py
numapi/numapi_to_pyboard/launch/: test.launch
numapi/numapi_to_pyboard/scripts/: cmd_vel_relay.py
system/: README.md
system/opi/: Pi_Poweroff.py  launch_roscore.bash  poweroff-button.service  roscore.service
system/rpi/: Pi_Poweroff.py  poweroff-button.service
wheel_test_bed/: MotorDriver.py  README.md  main.py  two_wheel.py
